# FAST_LIO_LOCALIZATION_GO2

./: .gitignore  GO2_REAL_ROBOT_MODIFICATION_GUIDE.md  MAP_SWITCH_REFACTOR_NOTES.md  README.md
FAST_LIO/Log/: mat_pre.txt
FAST_LIO/config/: mid360_go2.yaml
FAST_LIO/launch/: mapping_mid360_go2.launch
FAST_LIO/src/: laserMapping.cpp
livox_ros_driver2/config/: MID360_config.json
open3d_loc/: CMakeLists.txt
open3d_loc/config/: loc_param_go2.yaml  maps_example.yaml  maps_go2_example.yaml
open3d_loc/launch/: localization_3d_go2.launch  open3d_loc_go2.launch
open3d_loc/rviz_cfg/: loc_map_cur.rviz  loc_map_cur_ori.rviz
open3d_loc/src/: global_localization.cpp
